# jetson_encoder_compressed_image_transport

./: CMakeLists.txt  jetson_encoder_compressed_plugins.xml  package.xml
include/jetson_encoder_compressed_image_transport/: color_space.hpp  jetson_encoder_compressed_publisher.hpp  jetson_encoder_compression_common.hpp
src/: color_space.cu  jetson_encoder_compressed_publisher.cpp  manifest.cpp
